--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Mate+SC&display=swap" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet" /><title>Document</title></head>
+    <body onclick="PlayAudio()"><div class="v1_2"><div class="v2_8"></div><div class="v2_34"></div><div class="v16_33"></div><div class="v16_34"></div><div class="v16_35"></div><span class="v16_36">14/09/2024</span>
+        <span class="v16_37">Ernesto</span><span class="v29_61">E</span><span class="v16_38">Gabriela</span><span class="v29_62">G</span><span class="v16_39">&</span><span class="v29_63">&</span><div class="v29_55"></div>
+        <span class="v16_40">Ernesto Vásquez Pacheco
+<br>Yamile de la Asunción
+<br>Y
+<br>Milton Castilla
+<br>Yamile Ibarra</span><span class="v29_49">
 
+<h1>CEREMONIA</h1>
+
+<br>DIA
+
+<br><br>SÁBADO 14 DE SEPTIEMBRE</span><span class="v29_52"><br><h1>RECEPCIÓN</h1>
+
+<br>LAGUNA MAR BARANOA KM3
+<br>07:00</span><span class="v40_67"><br><h1>VESTIMENTA</h1>
+
+<br>HOMBRES
+<br>SACO
+
+<br><br>MUJER 
+<br>VESTIDO LARGO
+
+<br><br>SE RESERVA EL COLOR DORADO Y BLANCO</span><span class="v29_50"><br><h1>LUGAR</h1>
+
+<br>LAGUNA MAR BARANOA KM3
+<br>05:00</span><span class="v16_41">Tienen el honor de invitarle cordialmente a la ceremonia de sus hijos</span>
+<div class="v17_42">
+
+<div class="portada" id="portada">
+
+		<div id="cuenta"></div>
+	</div>
+
+</div><div class="v29_60"></div></div>
+
+<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+	<script src="js/simplyCountdown1.min.js"></script>
+	<script src="js/countdown1.js"></script>
+
+</body>
+<audio id="musica" loop>
+
+	<source src="perfect.mp3" type="audio/mpeg">
+
+</audio>
+<script>
+
+function PlayAudio(){
+	document.getElementById("musica").play();
+}
+
+</script>
+
+</html>
